name:                priority-queue-class
version:             0.1.0.0
synopsis:            Abstract interface for functional priority queues
license:             GPL-3
license-file:        LICENSE
author:              Preetham Gujjula
maintainer:          preetham.gujjula@gmail.com
copyright:           Preetham Gujjula, 2018
category:            Math
build-type:          Simple
cabal-version:       >=1.18

library
   exposed-modules: Data.PriorityQueue.Class
   build-depends:   base >= 4.4,
   hs-source-dirs:  src
   ghc-options:     -O2
